Bug 72814 - UI: Chart Data Ranges Dialog uses the Sheet References instead of the Data Range, leaves the input text controls empty
Summary: UI: Chart Data Ranges Dialog uses the Sheet References instead of the Data Ra...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: NoRepro:4.2.0.1:Ubuntu Confirmed:4.3....
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-12-17 21:23 UTC by Stephan van den Akker
Modified: 2014-09-08 11:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example reproducer document that contains a simple chart (20.81 KB, application/x-vnd.oasis.opendocument.spreadsheet)
2013-12-17 21:25 UTC, Stephan van den Akker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan van den Akker 2013-12-17 21:23:43 UTC
How to reproduce:
- Open the attached spreadsheet document. 
- Edit the chart data ranges (double-click, then right-click and choose Data Ranges)
- Select the y-Values line under Data ranges list

Expected result:
- Text label under the Data ranges list changes to "Range for y-Values";
- Text input field under this label contains the reference to the values in the sheet (e.g. $Sheet1.$A$1:$A$4)

Tested that it works this way on openSuSE 12.3 (64-bit) with Version 4.1.3.2, Build ID: 410m0(Build:2)

Actual result:
- Text label changes to "Range for " + reference to the values (e.g. "Range for $Sheet1.$A$1:$A$4" )
- Text input field remains empty.

Tested on Master Version: 4.3.0.0.alpha0+ 
Build ID: 802ca8cd36c4b08c629a956a4ed774e70e6c0060
on openSuSE 12.3 (64-bit, git pull 17 December 2013)
Comment 1 Stephan van den Akker 2013-12-17 21:25:59 UTC
Created attachment 90902 [details]
Example reproducer document that contains a simple chart
Comment 2 Robinson Tryon (qubit) 2013-12-19 23:53:38 UTC
TESTING with LO 4.2.0.1 + Ubuntu 12.04.3 

(In reply to comment #0)
> How to reproduce:
> - Open the attached spreadsheet document. 
> - Edit the chart data ranges (double-click, then right-click and choose Data
> Ranges)
> - Select the y-Values line under Data ranges list
> 

I first had to go to the 'Data Series' tab, then Data ranges -> 'Y-Values'.

> Expected result:
> - Text label under the Data ranges list changes to "Range for y-Values";
> - Text input field under this label contains the reference to the values in
> the sheet (e.g. $Sheet1.$A$1:$A$4)

For me, the text label changed to "Range for Y-Values", and the text input field changed to "$Sheet1.$A$1:$A$4"

So NOREPRO

> Tested that it works this way on openSuSE 12.3 (64-bit) with Version
> 4.1.3.2, Build ID: 410m0(Build:2)
> 

Yep, works with 4.2.0.1 as well, so quite possibly a regression on the 4.3 branch?
Comment 3 Robinson Tryon (qubit) 2013-12-20 02:22:31 UTC
CONFIRMED on LO 4.3.0.0.alpha0+ on Ubuntu 12.04.3.

(Following repro instructions from comment 0)

Keyword: regression
Comment 4 Laurent Balland 2014-01-10 07:27:58 UTC
May be due to conversion do UI of datarangedialog.src
Commit db666bdf0c048cec17669096cda414c4b48fc1ec
Comment 6 Commit Notification 2014-01-10 20:23:20 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b2d1ee5051efd6381485ff66cff3cce91e290a4

Resolves: fdo#72814 Fix Chart Data Ranges Dialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Stephan van den Akker 2014-01-10 22:16:13 UTC
Tested with Version: 4.3.0.0.alpha0+
Build ID: 957676441635d236743b61ccb74128821d07d0d0

Fixed indeed. Thanks Caolan.