Resolves: fdo#72814 Fix Chart Data Ranges Dialog

revert part of b193123b8e658d2eb25af5debe9de9e1b2386ef8

That "hidden" column conatined data which is important to make the dialog work.
If the hidden data is causing a11y problems then it needs to be reworked in a
different way rather than removed in one place but still being looked for in
another

Change-Id: I2990ac940a52d97da193af2147f2b61281e11020